--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>2023春学期</title>
+  <title>2023春学期第一回テスト</title>
 </head>
 <body>
-2023春学期
+こんにちは
 </body>
 </html>
