--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <div class="contaner">
   <h1 class="display-5">自己紹介</h1>
   <p>名前: 安岡 凜</p>
-  <p>埼玉県和光市出身、<abbr title="HyperText Markup Language">平成14年</abbr>生まれ</p>
+  <p>
+    <a href="http://www.city.wako.lg.jp/">埼玉県和光市</a>出身、
+    <abbr title="HyperText Markup Language">平成14年</abbr>生まれ
+  </p>
   <h2 class="display-5">趣味</h2>
   <p>ゲーム、運動、音楽を聴くこと</p>
   <p>飽き性なので色々なものに手を付けています！</p>
