--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
 <div class="contaner">
   <h1 class="display-5">自己紹介</h1>
   <p>名前: 安岡 凜</p>
-  <p>埼玉県和光市出身、<abbr title="HyperText Markup Language">平成14年</abbr>生まれ</p>
+  <p>
+    <a href="https://goo.gl/maps/qx47yQSMd99S7pH28">埼玉県和光市</a>出身、
+    <abbr title="HyperText Markup Language">平成14年</abbr>生まれ
+  </p>
   <h2 class="display-5">趣味</h2>
   <p>ゲーム、運動、音楽を聴くこと</p>
   <p>飽き性なので色々なものに手を付けています！</p>
   <h1 class="display-6">ほしいものリスト</h1>
-  <dl class="row">
-    <dt class="col-sm-0">家</dt>
-    <dd class="col-sm-10">早く実家を出て一人暮らしをしたいです</dd>
-    <dt class="col-sm-0">車</dt>
-    <dd class="col-sm-10">夏に免許を取るかもなので自由に使える車が欲しいです</dd>
-  </dl>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">家</li>
+    <li class="list-group-item">自動車免許</li>
+    <li class="list-group-item">車</li>
+    <li class="list-group-item">土地</li>
+    <li class="list-group-item">お金</li>
+  </ul>
 
 </div>
 
