--- a/230510/index.html
+++ b/230510/index.html
@@ -13,7 +13,7 @@
       <p>名前: 安岡 凜</p>
       <p>
         <a href="https://goo.gl/maps/qx47yQSMd99S7pH28">埼玉県和光市</a>出身、
-        <abbr title="HyperText Markup Language">平成14年</abbr>生まれ
+        <abbr title="HyperText Markup Language">平成14年</abbr>生まれ。
       </p>
       <h2 class="display-5">趣味</h2>
       <p>ゲーム、運動、音楽を聴くこと</p>
