--- a/230510/index.html
+++ b/230510/index.html
@@ -6,7 +6,7 @@
   <title>自己紹介</title>
 </head>
 <body>
-<div class="contaner">
+<div class="container">
   <div class="fs-4">
     <div style="margin-left: 1%">
       <h1 class="display-5">自己紹介</h1>
