--- a/230517/index.html
+++ b/230517/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<div class="container py-4">
+<div class="container">
   <h1 class="display-4 text-center mb-4">自己紹介</h1>
 
   <div class="card mb-4">
