--- a/230517/index.html
+++ b/230517/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>自己紹介</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <style>
     body {
-      background-color: #f8f9fa;
+      background-color: #dcdcdc;
     }
   </style>
 </head>
@@ -20,7 +20,10 @@
   <div class="card mb-4">
     <div class="card-body">
       <h5 class="card-title">名前: 安岡 凜</h5>
-      <p class="card-text">埼玉県和光市出身、<abbr title="HyperText Markup Language">平成14年</abbr>生まれ。</p>
+      <p>
+        <a href="https://goo.gl/maps/qx47yQSMd99S7pH28">埼玉県和光市</a>出身、
+        <abbr title="HyperText Markup Language">平成14年</abbr>生まれ。
+      </p>
     </div>
   </div>
 
@@ -46,7 +49,7 @@
   </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
