--- a/230524/index.html
+++ b/230524/index.html
@@ -14,7 +14,7 @@
 
     <div class="row">
       <div class="col border">
-        <div class="h1">ヘッダー</div>
+        <div class="h1">Yahoo!ニュース(ヘッダー)</div>
       </div>
     </div>
 
@@ -27,12 +27,12 @@
     <div class="row">
       <div class="col-1 border">トップ</div>
       <div class="col-1 border">速報</div>
-      <div class="col-2 border">ライブ</div>
+      <div class="col-1 border">live</div>
       <div class="col-1 border">個人</div>
       <div class="col-2 border">オリジナル</div>
       <div class="col-2 border">みんなの意見</div>
       <div class="col-2 border">ランキング</div>
-      <div class="col-1 border">有料</div>
+      <div class="col-2 border">有料</div>
     </div>
 
     <div class="row">
@@ -48,14 +48,17 @@
     </div>
 
     <div class="row">
-
       <div class="col-9 border">
-        <h2>メインコンテンツ</h2>
+        <h3>メインコンテンツ</h3>
         <hr>
         <p>本文</p>
+        <p></p>
+        <br>
         <h4>こんな記事も読まれています</h4>
         <hr>
         <p>本文</p>
+        <p></p>
+        <br>
       </div>
 
       <div class="col-3 border">
@@ -68,17 +71,17 @@
           <li class="list-group-item">5.カンガルー</li>
         </ul>
       </div>
-
     </div>
 
     <div class="row">
       <div class="col border">
-        <h2>フッター</h2>
+        <div class="text-center">
+          Copyright © 2023 ©Yahoo Japan
+        </div>
       </div>
     </div>
 
   </div>
-
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
