--- a/230524/index.html
+++ b/230524/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="ja">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,80 +9,76 @@
 </head>
 
 <body>
+
 <div class="container">
 
-  <div>
-
-    <div class="row">
-      <div class="col border">
-        <div class="h1">Yahoo!ニュース(ヘッダー)</div>
-      </div>
+  <div class="row">
+    <div class="col border">
+      <div class="h1">Yahoo!ニュース(ヘッダー)</div>
     </div>
-
-    <div class="row">
-      <div class="col border">
-        <div class="h5">キーワードを検索</div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-1 border">トップ</div>
-      <div class="col-1 border">速報</div>
-      <div class="col-1 border">live</div>
-      <div class="col-1 border">個人</div>
-      <div class="col-2 border">オリジナル</div>
-      <div class="col-2 border">みんなの意見</div>
-      <div class="col-2 border">ランキング</div>
-      <div class="col-2 border">有料</div>
-    </div>
-
-    <div class="row">
-      <div class="col-1 border">主要</div>
-      <div class="col-1 border">国内</div>
-      <div class="col-1 border">国際</div>
-      <div class="col-1 border">経済</div>
-      <div class="col-2 border">エンタメ</div>
-      <div class="col-2 border">スポーツ</div>
-      <div class="col-1 border">IT</div>
-      <div class="col-1 border">科学</div>
-      <div class="col-2 border">ランキング</div>
-    </div>
-
-    <div class="row">
-      <div class="col-9 border">
-        <h3>メインコンテンツ</h3>
-        <hr>
-        <p>本文</p>
-        <p></p>
-        <br>
-        <h4>こんな記事も読まれています</h4>
-        <hr>
-        <p>本文</p>
-        <p></p>
-        <br>
-      </div>
-
-      <div class="col-3 border">
-        <div class="h6">アクセスランキング</div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">1.犬</li>
-          <li class="list-group-item">2.猫</li>
-          <li class="list-group-item">3.兎</li>
-          <li class="list-group-item">4.ハム</li>
-          <li class="list-group-item">5.カンガルー</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col border">
-        <div class="text-center">
-          Copyright © 2023 ©Yahoo Japan
-        </div>
-      </div>
-    </div>
-
   </div>
+
+  <div class="row">
+    <div class="col border">
+      <div class="h5">キーワードを検索</div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-1 border">トップ</div>
+    <div class="col-1 border">速報</div>
+    <div class="col-1 border">live</div>
+    <div class="col-1 border">個人</div>
+    <div class="col-2 border">オリジナル</div>
+    <div class="col-2 border">みんなの意見</div>
+    <div class="col-2 border">ランキング</div>
+    <div class="col-2 border">有料</div>
+  </div>
+
+  <div class="row">
+    <div class="col-1 border">主要</div>
+    <div class="col-1 border">国内</div>
+    <div class="col-1 border">国際</div>
+    <div class="col-1 border">経済</div>
+    <div class="col-2 border">エンタメ</div>
+    <div class="col-2 border">スポーツ</div>
+    <div class="col-1 border">IT</div>
+    <div class="col-1 border">科学</div>
+    <div class="col-2 border">ランキング</div>
+  </div>
+
+  <div class="row">
+    <div class="col-9 border">
+      <h3>メインコンテンツ</h3>
+      <hr>
+      <p>本文</p>
+      <p></p>
+      <br>
+      <h4>こんな記事も読まれています</h4>
+      <hr>
+      <p>本文</p>
+      <p></p>
+      <br>
+    </div>
+
+    <div class="col-3 border">
+      <div class="h6">アクセスランキング</div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">1.犬</li>
+        <li class="list-group-item">2.猫</li>
+        <li class="list-group-item">3.兎</li>
+        <li class="list-group-item">4.ハム</li>
+        <li class="list-group-item">5.カンガルー</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col border">
+      <div class="text-center">Copyright © 2023 時事通信社 ©Yahoo Japan</div>
+    </div>
+  </div>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
