--- a/tyuukan/index.html
+++ b/tyuukan/index.html
@@ -5,29 +5,34 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <title>グリッドレイアウト</title>
+  <title>中間課題</title>
 </head>
 
-<body>
-
+<body id="top">
 <div class="container">
 
   <div class="row">
     <div class="col border">
-      <div class="h1">TUT BLOG</div>
+      <div class="h1">MY BLOG</div>
     </div>
   </div>
 
   <div class="row">
-    <div class="d-none d-xl-block col-md border">
-      <img src="https://placehold.jp/1300x300.png" alt="takitou">
+    <div class="d-none d-xl-block img-fluid col-md border">
+      <img src="https://placehold.jp/1300x300.png" alt=",,,">
     </div>
   </div >
 
   <div class="row">
-    <div class="col-1">ホーム</div>
-    <div class="col-1">twitter</div>
-    <div class="col-1">youtube</div>
+    <div class="d-none d-md-block d-xl-none img-fluid col-md border">
+      <img src="https://placehold.jp/700x150.png" alt=",,,">
+    </div>
+  </div >
+
+  <div class="row">
+    <div class="col-4 border">ホーム</div>
+    <div class="col-4 border">twitter</div>
+    <div class="col-4 border">youtube</div>
   </div>
 
   <div class="row">
@@ -35,31 +40,55 @@
       <h3>メインコンテンツ</h3>
       <hr>
       <p>本文</p>
-      <p></p>
-      <br>
+      <div class="pb-5"></div>
       <hr>
       <h4>こんな記事も読まれています</h4>
       <hr>
       <p>本文</p>
-      <p></p>
-      <br>
+      <div class="pb-5"></div>
     </div>
 
-    <div class="d-none d-md-block col-md-3 border">
+    <div class="d-block d-md-none col-md-3 border">
+      <h4>その他人気記事</h4>
+      <hr>
+      <p>本文</p>
+      <div class="pb-5"></div>
+    </div>
+
+    <div class="d-block d-md-none mx-auto img-fluid col-md-3 border">
+      <h4>自己紹介</h4>
+      <hr>
+      <img src="https://placehold.jp/150x150.png" alt=",,,">
+      <p>本文</p>
+      <div class="pb-5"></div>
+    </div>
+
+    <div class="d-none d-md-block img-fluid col-md-3 border">
+      <img src="https://placehold.jp/150x150.png" alt=",,,">
+      <div class="text-center">
+        <h4>自己紹介</h4>
+      </div>
+      <hr>
+      <p>本文</p>
+      <div class="pb-5"></div>
       <div class="h6">アクセスランキング</div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">1.犬</li>
-        <li class="list-group-item">2.猫</li>
-        <li class="list-group-item">3.兎</li>
-        <li class="list-group-item">4.ハム</li>
-        <li class="list-group-item">5.カンガルー</li>
+        <li class="list-group-item">1.</li>
+        <li class="list-group-item">2.</li>
+        <li class="list-group-item">3.</li>
+        <li class="list-group-item">4.</li>
+        <li class="list-group-item">5.</li>
       </ul>
     </div>
   </div>
 
+  <div class="bottom text-center">
+    <a class="btn text-primary" href="#top" role="button" >ページTOPに戻る</a>
+  </div>
+
   <div class="row">
     <div class="col border">
-      <div class="text-center">Copyright © 2023 時事通信社 ©Yahoo Japan</div>
+      <div class="text-center">hello world © 2023 my通信社 ©Aho Japan</div>
     </div>
   </div>
 
