--- a/saisyu/最終課題.html
+++ b/saisyu/最終課題.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="bootstrap.min.css">
   <script type="text/javascript" src="js/vue.dev.js"></script>
   <title>最終課題</title>
 
@@ -24,128 +25,53 @@
 </head>
 
 <body>
-  <div class="album py-4 bg-light">
-    <div id="vue" class="container">
-      <div class="row">
-        <div class="col-md-4" v-for='item in list'>
-          <div class="card mb-4 box-shadow border-2">
-            <div class="card-img-container">
-              <img :src="item.img" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-              <hr>
-              <h4 class="card-title">{{ item.name }}</h4>
-              <p class="card-text">
-                <strong>リージョン: {{ item.region }} 順位: {{ item.rank }}位</strong>
-              </p>
-              <h4>ロースター</h4>
-              <ul>
-                <li v-for='set in item.set'>名前: {{ set.player }} ロール: {{ set.role }}</li>
-              </ul>
-            </div>
+
+
+
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="rin0420.github.io/saisyu/最終課題2.html">Cyclopedia</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="rin0420.github.io/saisyu/最終課題.htmla">Home
+            <span class="visually-hidden">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Separated link</a>
           </div>
-        </div>
-      </div>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-sm-2" type="search" placeholder="Search" spellcheck="false" data-ms-editor="true">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">検索</button>
+      </form>
     </div>
   </div>
+</nav>
 
 
-
-  
-
-  <script type="text/javascript">
-    new Vue({
-      el: '#vue',
-      data: {
-        list: [
-          {
-            "name": "Team Liquid", "region": "EMEA", "rank": 3, "img": "600px-Team_Liquid_2023_lightmode.png", "set": [
-              { "player": "Sayf", "role": "Duelist" },
-              { "player": "Redgar ", "role": "Frex" },
-              { "player": "Jamppi", "role": "Initiator" },
-              { "player": "nAts", "role": "Controller" },
-              { "player": "soulcus", "role": "Sentinel" },
-            ]
-          },
-          {
-            "name": "DRX", "region": "PACIFIC", "rank": 2, "img": "600px-DRX_2023_full_lightmode.png", "set": [
-              { "player": "Foxy9", "role": "Duelist" },
-              { "player": "BuZz", "role": "Frex" },
-              { "player": "stax", "role": "Initiator" },
-              { "player": "Mako", "role": "Controller" },
-              { "player": "Rb", "role": "Sentinel" },
-            ]
-          },
-          {
-            "name": "EDward Gaming", "region": "CHINA", "rank": 2, "img": "600px-EDward_Gaming_2017_lightmode.png", "set": [
-              { "player": "Zmjjkk", "role": "Duelist" },
-              { "player": "CHICHOO", "role": "Frex" },
-              { "player": "nobody", "role": "Initiator" },
-              { "player": "Haodong", "role": "Controller" },
-              { "player": "smoggy", "role": "Sentinel" },
-            ]
-          },
-          {
-            "name": "PaperRex", "region": "PACIFIC", "rank": 1, "img": "600px-Paper_Rex_lightmode_full.png", "set": [
-              { "player": "something", "role": "Duelist" },
-              { "player": "f0rsaken", "role": "Frex" },
-              { "player": "jinggg", "role": "Initiator" },
-              { "player": "minfreak", "role": "Controller" },
-              { "player": "d4v4i", "role": "Sentinel" },
-            ]
-          },
-          {
-            "name": "T1", "region": "PACIFIC", "rank": 3, "img": "600px-T1_allmode.png", "set": [
-              { "player": "sayaplayer", "role": "Duelist" },
-              { "player": "ban", "role": "Frex" },
-              { "player": "carpe", "role": "Initiator" },
-              { "player": "xeta", "role": "Controller" },
-              { "player": "Munchikin", "role": "Sentinel" },
-            ]
-          },
-          {
-            "name": "Attacking Soul Esports", "region": "CHINA", "rank": 1, "img": "Attacking_Soul_Esports_allmode.png", "set": [
-              { "player": "Life", "role": "Duelist" },
-              { "player": "Monk", "role": "Frex" },
-              { "player": "hfmi0dzjc9z7", "role": "Initiator" },
-              { "player": "YHchen", "role": "Controller" },
-              { "player": "Bunt", "role": "Sentinel" },
-            ]
-          },
-          {
-            "name": "EVIL GENIUSES", "region": "AMERICAS", "rank": 3, "img": "600px-Evil_Geniuses_2020_full_lightmode.png", "set": [
-              { "player": "Demon1", "role": "Duelist" },
-              { "player": "Ethan", "role": "Frex" },
-              { "player": "jawgemo", "role": "Initiator" },
-              { "player": "C0M", "role": "Controller" },
-              { "player": "Boostio", "role": "Sentinel" },
-            ]
-          },
-          {
-            "name": "FNATIC", "region": "EMEA", "rank": 1, "img": "800px-Fnatic_2020_allmode.png", "set": [
-              { "player": "Derke", "role": "Duelist" },
-              { "player": "Alfajer", "role": "Frex" },
-              { "player": "Chronicle", "role": "Initiator" },
-              { "player": "Boaster", "role": "Controller" },
-              { "player": "Alfajer", "role": "Sentinel" },
-            ]
-          },
-          {
-            "name": "LOUD", "region": "AMERICAS", "rank": 1, "img": "800px-LOUD_allmode.png", "set": [
-              { "player": "aspas", "role": "Duelist" },
-              { "player": "Less", "role": "Frex" },
-              { "player": "saadhak", "role": "Initiator" },
-              { "player": "tuyz", "role": "Controller" },
-              { "player": "cauanzin", "role": "Sentinel" },
-            ]
-          }
-        ]
-      }
-    });
-
-
-  </script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
