--- a/saisyu/index2.html
+++ b/saisyu/index2.html
@@ -4,104 +4,159 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="bootstrap.min.css">
+  <script type="text/javascript" src="js/vue.dev.js"></script>
   <title>最終課題</title>
 
   <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
+    .table-responsive {
+      padding: 20px;
     }
   </style>
+
 </head>
 
 <body>
 
+
+
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="index.html">Cyclopedia</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home
-            <span class="visually-hidden">(current)</span>
+          <a class="nav-link " href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="index2.html">pro setting
+            <span class="visually-hidden"></span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">team</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#">pacific</a>
+            <a class="dropdown-item" href="#">emea</a>
+            <a class="dropdown-item" href="#">americas</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
+            <a class="dropdown-item" href="index3.html">general</a>
           </div>
         </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-sm-2" type="search" placeholder="Search" spellcheck="false" data-ms-editor="true">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">search</button>
       </form>
     </div>
   </div>
 </nav>
 
-<main>
+<div class="container-fluid">
 
-  <body>
-  <div class="album py-4 bg-light">
-    <div id="vue" class="container">
-      <div class="row">
-        <div class="col-md-4" v-for='item in list'>
-          <div class="card mb-4 box-shadow border-2">
-            <div class="card-img-container">
-              <img :src="item.img" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-              <hr>
-              <h4 class="card-title">{{ item.name }}</h4>
-              <p class="card-text">
-                <strong>リージョン: {{ item.region }} 順位: {{ item.rank }}位</strong>
-              </p>
-              <h4>ロースター</h4>
-              <ul>
-                <li v-for='set in item.set'>名前: {{ set.player }} ロール: {{ set.role }}</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="table-responsive">
+    <h2>Section title</h2>
+    <table class="table table-striped table-sm">
+      <thead>
+      <tr>
+        <th scope="col">team</th>
+        <th scope="col">name</th>
+        <th scope="col">dpi</th>
+        <th scope="col">sense</th>
+        <th scope="col">mouse</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3r</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3r</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3r</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3r</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3r</td>
+        <td>g pro</td>
+      </tr>
+      <tr>
+        <td>v1</td>
+        <td>name</td>
+        <td>800</td>
+        <td>0.3r</td>
+        <td>g pro</td>
+      </tr>
+      </tbody>
+    </table>
   </div>
-
-</main>
-
+</div>
 
 
 
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+
 </html>
